force-app/main/default/objects/Application_Document__c/Application_Document__c.object-meta.xml
<CustomObject>
    <description>Digitization: Onboarding - All required and supporting document link information is stored in this object.The actual file is stored on FileNet..</description>
    <label>Application Document</label>
    <nameField>
        <displayFormat>AD-{000000000}</displayFormat>
        <label>Application Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>