force-app/main/default/objects/Application_Document__c/fields/Are_you_a_public_official__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_public_official__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you a public official?</label>
    <type>Checkbox</type>
</CustomField>