force-app/main/default/objects/Application_Document__c/fields/Are_you_related_to_a_public_official_i__c.field-meta.xml
<CustomField>
    <fullName>Are_you_related_to_a_public_official_i__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you related to a public official?</label>
    <type>Checkbox</type>
</CustomField>