force-app/main/default/objects/Application_Document__c/fields/Authorised_Person__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>All documents related to an Authorised Person</description>
    <inlineHelpText>An authorised person is any person who has been designated by written notice from the client or its designated agent to act on behalf of the client</inlineHelpText>
    <label>Authorised Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Application Documents</relationshipLabel>
    <relationshipName>Application_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>