force-app/main/default/objects/Application_Document__c/fields/Authorised_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person(s) at the client who has approved/reviewed the request.</inlineHelpText>
    <label>Authorised Signatory</label>
    <referenceTo>Authorised_Signatory__c</referenceTo>
    <relationshipLabel>Supporting Documents</relationshipLabel>
    <relationshipName>Supporting_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>