force-app/main/default/objects/Application_Document__c/fields/Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Link__c</fullName>
    <description>Digitisation: Client On-boarding - The URL to the endpoint on document storage (FileNet) where the on-boarding document is stored.</description>
    <inlineHelpText>The file location where the client document is stored.</inlineHelpText>
    <label>Document Link</label>
    <type>Url</type>
</CustomField>