force-app/main/default/objects/Application_Document__c/fields/FileNet_Id__c.field-meta.xml
<CustomField>
    <fullName>FileNet_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The unique identifying number for the document on FileNet.</inlineHelpText>
    <label>FileNet Id</label>
    <length>254</length>
    <required>true</required>
    <type>Text</type>
</CustomField>