force-app/main/default/objects/Application_Document__c/fields/Onboarding_Application__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Onboarding application that this document was submitted with</description>
    <label>Onboarding Application</label>
    <referenceTo>Onboarding_Application__c</referenceTo>
    <relationshipLabel>Application Documents</relationshipLabel>
    <relationshipName>Application_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>