force-app/main/default/objects/Application_Document__c/fields/Public_Official_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Public_Official_Relationship__c</fullName>
    <label>Public Official Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Business Partner</fullName>
            </value>
            <value>
                <fullName>Close Associate</fullName>
            </value>
            <value>
                <fullName>Son / Daughter</fullName>
            </value>
            <value>
                <fullName>Spouse / Partner</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>