force-app/main/default/objects/Application_Document__c/fields/Public_Official_Surname__c.field-meta.xml
<CustomField>
    <fullName>Public_Official_Surname__c</fullName>
    <label>Public Official Surname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>