force-app/main/default/objects/Application_Document__c/fields/Reason_For_Decline__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Decline__c</fullName>
    <label>Reason For Decline</label>
    <type>TextArea</type>
</CustomField>