force-app/main/default/objects/Application_Document__c/fields/Related_Party__c.field-meta.xml
<CustomField>
    <fullName>Related_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Party</label>
    <referenceTo>Related_Party__c</referenceTo>
    <relationshipLabel>Supporting Documents</relationshipLabel>
    <relationshipName>Supporting_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>